--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Server configuration
 server.port=8080
-
+server.servlet.context-path=/api
 # Application name
 spring.application.name=scb-assignment
 
 # Logging configuration
 logging.level.root=INFO
 logging.level.com.scb=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -21,10 +21,14 @@ spring.h2.console.path=/h2-console
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # Flyway Configuration
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+
+# JWT Configuration
+jwt.expiration=3600000
+jwt.secret=${JWT_SECRET}
