--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.flyway.baseline-on-migrate=true
 # JWT Configuration
 jwt.expiration=3600000
 jwt.secret=${JWT_SECRET}
+
+# Employee Configuration
+employee.default.password=${DEFAULT_EMPLOYEE_PASSWORD}
